Margin and spacing issues

--- a/js/author/styles/a2j-custom/a2j-layout.less
+++ b/js/author/styles/a2j-custom/a2j-layout.less
@@ -1,5 +1,5 @@
 .page {
-  padding: @grid-gutter-width/2;
+  padding: @grid-gutter-width;
 
   .page-title {
     margin-top: 0;
